data/Java/04-string-access-by-index/1/[M]Error.txt
*https://www.tutorialspoint.com/java/java_string_charat.htm
Test.java:5: error: array required, but String found
       char result = s[8];
                      ^